fix sample code, add a JSR223 session